# aw-notify-rs

./: .pre-commit-config.yaml  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
src/: main.rs
